--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -40,14 +40,15 @@
 
 <body style="background-image:url(img/background.jpg);background-size:cover;padding: 20px;">
     <center>
-        <img src="img/title.png" style="height: 3em;margin-bottom: -10px;">
+        <img src="img/title1.png" style="height: 3em;margin-bottom: -10px;">
     </center>
 
     <hr>
-    <form action="" style="color:#fff;margin-top:25px">
-        <div class="form-group">
+    <div style="color:#fff;margin-top:25px">
+        <div class="form-group input">
             <label>WhatsApp Number:</label>
-            <input type="number" class="form-control loading" id="number" name="number" placeholder="With country code, Eg: 919933000000">
+            <input type="number" class="form-control loading" id="number" name="number" data-dependency="message" placeholder="With country code, Eg: 919933000000">
+            <span id="hint">number with country code, Eg: 919933000000</span>
         </div>
         <div class="form-group">
             <label>Message:</label>
@@ -61,7 +62,7 @@
             </a>
         </div>
         <label data-toggle="modal" data-target="#myModal" style="text-align:center;position:fixed;bottom:0px;width:100%;" value="">@about the app</label>
-    </form>
+    </div>
     <div class="modal fade" id="myModal" role="dialog" style="bottom: 0px;position: fixed;top: auto;">
         <div class="modal-dialog" data-keyboard="true">
 
@@ -75,13 +76,13 @@
                     <p>
                         <b>
                             <ul>
-                                <li>Type or Paste mobile number. </li>
+                                <li>Type or paste mobile number. </li>
                                 <li>Number should prefix country code.</li>
                                 <li>Message box is optional.</li>
                             </ul>
                             <br>
                             <ul>
-                                <li>This app is only an extion to whatsapp.</li>
+                                <li>This app is only an extention to whatsapp.</li>
                                 <li>App doesn't collect or save user data.</li>
                             </ul>
                         </b>
