--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -29,7 +29,7 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"> -->
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -46,7 +46,7 @@
     <hr>
     <div style="color:#fff;margin-top:25px">
         <div class="form-group input">
-            <label>WhatsApp Number:</label>
+            <label>WhatsApp Number:</label><button id="callLog" type="button" class="btn btn-primary" style="float: right;padding-top: 0px;padding-bottom: 0px;">Call log</button>
             <input type="number" class="form-control loading" id="number" name="number" data-dependency="message" placeholder="With country code, Eg: 919933000000">
             <span id="hint">number with country code, Eg: 919933000000</span>
         </div>
@@ -77,6 +77,7 @@
                         <b>
                             <ul>
                                 <li>Type or paste mobile number. </li>
+                                <li>Valid mobile will auto detect from clip board. </li>
                                 <li>Number should prefix country code.</li>
                                 <li>Message box is optional.</li>
                             </ul>
@@ -87,6 +88,27 @@
                             </ul>
                         </b>
                     </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="modal fade" id="callLogsModal" role="dialog" style="bottom: 0px;position: fixed;top: auto;">
+        <div class="modal-dialog" data-keyboard="true">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <img src="img/logo.png" width="25px">&nbsp;&nbsp;Select from call history</h4>
+                </div>
+                <div class="modal-body">
+                    <ul class="list-group">
+                        <li class="list-group-item"> <span class="badge"></span></li>
+                      </ul>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
