--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -77,6 +77,7 @@
                         <b>
                             <ul>
                                 <li>Type or paste mobile number. </li>
+                                <li>Valid mobile will auto detect from clip board. </li>
                                 <li>Number should prefix country code.</li>
                                 <li>Message box is optional.</li>
                             </ul>
