--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
 
 <body style="background-image:url(img/background.jpg);background-size:cover;padding: 20px;">
     <center>
-        <img src="img/title.png" style="height: 3em;margin-bottom: -10px;">
+        <img src="img/title1.png" style="height: 3em;margin-bottom: -10px;">
     </center>
 
     <hr>
