auto detet country code

--- a/www/index.html
+++ b/www/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="modal-body">
                     <p>
-                        <b>
+                       <b>
                             <ul>
                                 <li>Mobile number can be type / paste / get from call history. </li>
                                 <li>Valid mobile will auto detect from clip board. </li>
@@ -116,6 +116,7 @@
                             <ul>
                                 <li>This app is only an extention to whatsapp.</li>
                                 <li>App doesn't collect or save user data.</li>
+                                <li>For suggestion and report issue, mail to <a href="mailto:pingtomansoor@gmail.com?Subject=WhatsappToUnsaved" target="_top">pingtomansoor@gmail.com.</a></li>
                             </ul>
                         </b>
                     </p>
